--- a/public/css/settings.css
+++ b/public/css/settings.css
@@ -23,7 +23,6 @@
 	color: #FFF;
 }
 ._settings .input-container{
-	width: 50%;
 	vertical-align: middle;
 }
 ._settings label{
