--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -74,6 +74,7 @@
   bottom: 0;
   background-color: #222222;
   width:100%;
+  margin: 0.1em 0;
 }
 
 .footer a {
